<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_theme_switch"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorFontGray"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@mipmap/ic_color_theme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/theme_switch"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_16" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:background="@mipmap/ic_keyboard_arrow_right" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_settings"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/ll_theme_switch"
                android:layout_marginTop="2dp"
                android:background="@color/colorFontGray"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@mipmap/ic_settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/settings"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_16" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="230dp"
                    android:background="@mipmap/ic_keyboard_arrow_right" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_share"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/ll_settings"
                android:layout_marginTop="2dp"
                android:background="@color/colorFontGray"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ic_share" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/share"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_16" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>