<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toobar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:theme="@style/ToolbarTheme" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/rl_app_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/darkgray">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_app_icon"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="40dp"
                            android:src="@mipmap/ic_launcher" />

                        <TextView
                            android:id="@+id/tv_app_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="15dp"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/font_20" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <RatingBar
                                android:id="@+id/rb"
                                style="@style/Widget.AppCompat.RatingBar.Small"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:numStars="5"
                                android:rating="5" />

                            <TextView
                                android:id="@+id/tv_app_size"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="5dp"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/font_16" />

                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="1dp"
                                android:layout_marginRight="1dp"
                                android:background="@color/colorWhite" />

                            <TextView
                                android:id="@+id/tv_install_num"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorWhite" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_official"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="@color/yellow"
                            android:textSize="@dimen/font_14" />
                    </LinearLayout>

                </RelativeLayout>

                <android.support.design.widget.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.CoordinatorLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/ll_app_detail_screen_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_app_introduce"
                    android:text="@string/app_introduce"
                    android:textColor="@color/colorGrayBlack"
                    android:textSize="@dimen/font_18" />

                <TextView
                    android:id="@+id/tv_app_introduce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_app_detail_msg"
                    android:text="@string/app_msg"
                    android:textColor="@color/colorGrayBlack"
                    android:textSize="@dimen/font_18" />

                <TextView
                    android:id="@+id/tv_app_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textSize="@dimen/font_18" />

                <TextView
                    android:id="@+id/tv_app_release_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/tv_app_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:textSize="@dimen/font_16" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:textSize="@dimen/font_18" />
        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/pb_download_progress"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:max="0"
            android:progress="90"
            android:progressDrawable="@drawable/layer_list_progress_bg" />

        <Button
            android:id="@+id/btn_install"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@null"
            android:text="@string/install"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_18" />

    </FrameLayout>
</RelativeLayout>
